samples/_failures_safe/1761164743_0fbbe0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fcf5c59e.c: In function ‘main’:
./samples/SAFE/__tmp_fcf5c59e.c:144:17: error: expected declaration or statement at end of input
  144 |                 printf("Enter matrix to transpose:\n");
      |                 ^~~~~~
./samples/SAFE/__tmp_fcf5c59e.c:144:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fcf5c59e.c:144:17: error: expected declaration or statement at end of input
